WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76899
[GTK] Page clients don't need to be GObjects anymore in WebKit2 GTK+ API
https://bugs.webkit.org/show_bug.cgi?id=76899
Summary
[GTK] Page clients don't need to be GObjects anymore in WebKit2 GTK+ API
Carlos Garcia Campos
Reported
2012-01-24 02:46:51 PST
They are now private and only provide a way to attach callbacks to the client.
Attachments
Patch
(23.11 KB, patch)
2012-01-24 02:52 PST
,
Carlos Garcia Campos
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2012-01-24 02:52:51 PST
Created
attachment 123708
[details]
Patch
WebKit Review Bot
Comment 2
2012-01-24 02:54:19 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Martin Robinson
Comment 3
2012-01-24 06:48:19 PST
Comment on
attachment 123708
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=123708&action=review
> Source/WebKit2/UIProcess/API/gtk/WebKitWebLoaderClient.cpp:22 > #include "WebKitWebLoaderClient.h"
Please rename this file to WebKitLoaderClient to match the name of the client now.
Carlos Garcia Campos
Comment 4
2012-01-25 00:37:21 PST
Committed
r105854
: <
http://trac.webkit.org/changeset/105854
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug