[GTK] Page clients don't need to be GObjects anymore in WebKit2 GTK+ API https://bugs.webkit.org/show_bug.cgi?id=76899

Reviewed by Martin Robinson.

Source/WebKit2:

* UIProcess/API/gtk/WebKitLoaderClient.cpp: Renamed from
Source/WebKit2/UIProcess/API/gtk/WebKitWebLoaderClient.cpp.
(didStartProvisionalLoadForFrame): Use clientInfo instead fo
getting the view from the page.
(didReceiveServerRedirectForProvisionalLoadForFrame): Ditto.
(didFailProvisionalLoadWithErrorForFrame): Ditto.
(didCommitLoadForFrame): Ditto.
(didFinishLoadForFrame): Ditto.
(didFailLoadWithErrorForFrame): Ditto.
(didSameDocumentNavigationForFrame): Ditto.
(didReceiveTitleForFrame): Ditto.
(didChangeProgress): Ditto.
(didChangeBackForwardList): Ditto.
(attachLoaderClientToView): Pass WebKitWebView as clientInfo to
callbacks.
* UIProcess/API/gtk/WebKitLoaderClient.h: Added.
* UIProcess/API/gtk/WebKitUIClient.cpp:
(createNewPage): Use clientInfo instead fo getting the view from
the page.
(showPage): Ditto.
(closePage): Ditto.
(runJavaScriptAlert): Ditto.
(runJavaScriptConfirm): Ditto.
(runJavaScriptPrompt): Ditto.
(toolbarsAreVisible): Ditto.
(setToolbarsAreVisible): Ditto.
(menuBarIsVisible): Ditto.
(setMenuBarIsVisible): Ditto.
(statusBarIsVisible): Ditto.
(setStatusBarIsVisible): Ditto.
(isResizable): Ditto.
(setIsResizable): Ditto.
(getWindowFrame): Ditto.
(setWindowFrame): Ditto.
(attachUIClientToView): Pass WebKitWebView as clientInfo to
callbacks.
* UIProcess/API/gtk/WebKitUIClient.h: Remove GObject boilerplate.
* UIProcess/API/gtk/WebKitWebLoaderClient.h: Removed.
* UIProcess/API/gtk/WebKitWebView.cpp:
(webkitWebViewConstructed): Remove UIClient and LoaderClient
objects and call attachUIClientToView() and attachLoaderClientToView().
* UIProcess/API/gtk/tests/GNUmakefile.am: Rename
WebKitWebLoaderClient to WebKitLoaderClient.
* UIProcess/API/gtk/tests/TestLoaderClient.cpp: Renamed from
Source/WebKit2/UIProcess/API/gtk/tests/TestWebKitWebLoaderClient.cpp.

Tools:

* gtk/generate-gtkdoc:
(get_webkit2_options): WebKitWebLoaderClient has been renamed to
WebKitLoaderClient.

Canonical link: https://commits.webkit.org/93857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105854 268f45cc-cd09-0410-ab3c-d52691b4dbfc